--- a/package.json
+++ b/package.json
@@ -34,16 +34,16 @@
     "singleQuote": true,
     "trailingComma": "es5"
   },
-  "name": "do-product-card",
+  "name": "nr-product-card",
   "author": "Fernando Herrera",
-  "module": "dist/do-product-card.esm.js",
+  "module": "dist/nr-product-card.esm.js",
   "size-limit": [
     {
-      "path": "dist/do-product-card.cjs.production.min.js",
+      "path": "dist/nr-product-card.cjs.production.min.js",
       "limit": "10 KB"
     },
     {
-      "path": "dist/do-product-card.esm.js",
+      "path": "dist/nr-product-card.esm.js",
       "limit": "10 KB"
     }
   ],
