--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "dist",
     "src"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/normandor/nr-product-card"
+  },
   "engines": {
     "node": ">=10"
   },
